--- a/assets/css/themes.css
+++ b/assets/css/themes.css
@@ -1,18 +1,17 @@
-/* Світла тема (за замовчуванням) */
+/* Light theme */
 .light {
   --background-color: #ffffff;
   --text-color: #000000;
   --primary-color: #3490dc;
 }
 
-/* Темна тема */
+/* Dark theme  */
 .dark {
   --background-color: #1a202c;
   --text-color: #f7fafc;
   --primary-color: #4c51bf;
 }
 
-/* Використання змінних */
 body {
   font-family: "Inter", sans-serif;
   background-color: var(--background-color);
